--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta http-equiv=Content-Type content="text/html; charset=utf-8">
-  <title>莫老师的附件表</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
-</head>
-<body>
-  <div id="app"></div>
-  <script>
-    window.$docsify = {
-      name: '',
-      repo: ''
-    }
-  </script>
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-</body>
-</html>
+---
+layout: page
+title: 首页
+---
+<div class="page page-index">
+  {% for post in site.posts  -%}
+    {%- capture post_year %}{{ post.date | date: "%Y" }}{% endcapture -%}
+    {%- capture post_previous_year %}{{ post.previous.date | date: "%Y" }}{% endcapture -%}
+    {%- capture post_next_year %}{{ post.next.date | date: "%Y" }}{% endcapture -%}
+    {%- if forloop.first or post_next_year != post_year -%}
+    <div class="list-post">
+      <h2 id="{{post_year}}">{{post_year}}</h2>
+      <ul>
+    {%- endif %}
+        <li>
+          <span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
+          <div class="title">
+            <a href="{{ site.baseurl | append: post.url }}" class="hover-underline">{{ post.title }}</a>
+          </div>
+          <div class="categories">
+            {% for categorie in post.categories -%}
+            <a href="{{site.baseurl}}/pages/categories.html#{{ categorie }}" class="hover-underline">{{ categorie }}</a>
+            {%- endfor %}
+          </div>
+        </li>
+    {%- if forloop.last or post_previous_year != post_year %}
+      </ul>
+    </div>
+    {%- endif %}
+  {%- endfor %}
+</div>
